--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
 		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
-		"*": ["biome check --write"]
+		"*": ["biome check --write --no-errors-on-unmatched"]
 	}
 }
